# django-microblog

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
microblog/: __init__.py  admin.py  apps.py  managers.py  models.py  urls.py  views.py
microblog/fixtures/: categories.json  posts.json
microblog/migrations/: 0001_initial.py  0002_add_weight.py  0003_alter_weight_default.py
